Fix weird scrollbar near textarea on Chrome

--- a/app/less/desktop.less
+++ b/app/less/desktop.less
@@ -1185,8 +1185,7 @@ a.im_panel_peer_photo .peer_initials {
 }
 .composer_rich_textarea,
 .composer_textarea {
-  overflow: none;
-  overflow-y: scroll;
+  overflow-x: hidden;
   border-radius: 0;
   border: 0;
   box-shadow: none;
